deployments/gateway-deployment.yaml
# ===================================================
# 15. API 게이트웨이 배포
# ===================================================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-lee-deployment
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: gateway-lee
  template:
    metadata:
      labels:
        app: gateway-lee
    spec:
      nodeSelector:
        agentpool: userpool
      containers:
        - name: gateway-lee-container
          image: kt16big.azurecr.io/gateway-lee:${IMAGE_TAG}
          ports:
            - containerPort: 9000
---
# ===================================================
# 16. API 게이트웨이 서비스
# ===================================================
apiVersion: v1
kind: Service
metadata:
  name: gateway-lee-service
spec:
  type: ClusterIP
  selector:
    app: gateway-lee
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
