deployments/question-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: question-frontend-deployment-lee-2
  namespace: lee
spec:
  replicas: 1
  selector:
    matchLabels:
      app: question-frontend-lee-2
  template:
    metadata:
      labels:
        app: question-frontend-lee-2
    spec:
      nodeSelector:
        agentpool: userpool
      containers:
      - name: question-frontend-container-lee-2
        image: kt16big.azurecr.io/question-frontend-lee-2:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: question-frontend-service-lee-2
  namespace: lee
spec:
  type: ClusterIP
  selector:
    app: question-frontend-lee-2
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: question-backend-deployment-lee-2
  namespace: lee
spec:
  replicas: 1
  selector:
    matchLabels:
      app: question-backend-lee-2
  template:
    metadata:
      labels:
        app: question-backend-lee-2
    spec:
      nodeSelector:
        agentpool: userpool
      containers:
      - name: question-backend-container-lee-2
        image: kt16big.azurecr.io/question-backend-lee-2:latest
        ports:
        - containerPort: 8083
        resources:
          requests:
            memory: "512Mi"
            cpu: "500m"
          limits:
            memory: "1Gi"
            cpu: "1000m"
---
apiVersion: v1
kind: Service
metadata:
  name: question-backend-service-lee-2
  namespace: lee
spec:
  type: ClusterIP
  selector:
    app: question-backend-lee-2
  ports:
  - protocol: TCP
    port: 8083
    targetPort: 8083
