deployments/user-backend-deployment.yaml
# ===================================================
# 11. 사용자(User) 백엔드 배포
# ===================================================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-backend-lee-deployment
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: user-backend-lee
  template:
    metadata:
      labels:
        app: user-backend-lee
    spec:
      nodeSelector:
        agentpool: userpool
      containers:
        - name: user-backend-lee-container
          image: kt16big.azurecr.io/user-backend-lee:${IMAGE_TAG}
          ports:
            - containerPort: 9002
---
# ===================================================
# 12. 사용자(User) 백엔드 서비스
# ===================================================
apiVersion: v1
kind: Service
metadata:
  name: user-backend-lee-service
spec:
  type: ClusterIP
  selector:
    app: user-backend-lee
  ports:
    - protocol: TCP
      port: 9002
      targetPort: 9002
